Success: Run Each Node for Launcher and Launch 5 nodes together

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 # This file currently only serves to mark the location of a catkin workspace for tool integration
 ./build/
 ./devel/
+.catkin_workspace
