--- a/src/boss/package.xml
+++ b/src/boss/package.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0"?>
 <package format="2">
-  <name>master</name>
+  <name>boss</name>
   <version>0.0.0</version>
-  <description>The master package</description>
+  <description>The boss package</description>
 
   <!-- One maintainer tag required, multiple allowed, one person per tag -->
   <!-- Example:  -->
